--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2123,6 +2123,43 @@ author = "John Ellis and J.S. Hagelin and D.V. Nanopoulos and K. Olive and M. Sr
       SLACcitation   = "%%CITATION = ARXIV:1407.5066;%%",
 }
 
+@article{RevModPhys.47.123,
+  title = {An introduction to the theory of dual models and strings},
+  author = {Scherk, J.},
+  journal = {Rev. Mod. Phys.},
+  volume = {47},
+  issue = {1},
+  pages = {123--164},
+  numpages = {0},
+  year = {1975},
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/RevModPhys.47.123},
+  url = {http://link.aps.org/doi/10.1103/RevModPhys.47.123}
+}
+
+@book{siegel1988introduction,
+  title={Introduction to string field theory},
+  author={Siegel, Warren},
+  volume={8},
+  year={1988},
+  publisher={World Scientific}
+}
+
+@article{Ibrahim:2007fb,
+      author         = "Ibrahim, Tarek and Nath, Pran",
+      title          = "{CP Violation From Standard Model to Strings}",
+      journal        = "Rev.Mod.Phys.",
+      volume         = "80",
+      pages          = "577-631",
+      doi            = "10.1103//RevModPhys.80.577",
+      year           = "2008",
+      eprint         = "0705.2008",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:0705.2008;%%",
+}
+
 % --- Indirect searches for new physics -------------------
 @Article{Chen:2001fja,
      author    = "Chen, S. and others",
